# clouds-lib

./: .gitignore  Makefile.am  README.md  configure.ac
src/: .c_bindings.f90.swp  c_bindings.f90  c_bindings.lo  clouds_lib.h  hu_stamnes.f90  hu_stamnes.lo  ice_cloud_optics.f90  ice_cloud_optics.lo  incomplete_beta.f90  incomplete_beta.lo  netcdf_utils.f90  netcdf_utils.lo  optics_utils.f90  optics_utils.lo  slingo.f90  slingo.lo  stochastic_clouds.f90  stochastic_clouds.lo
src/c-files/: hu_stamnes.c  ice_cloud_optics.c  incomplete_beta.c  netcdf_utils.c  netcdf_utils.h  optics_utils.c  stochastic_clouds.c
tests/: c-test.c  run_tests
